--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>common</module>
         <module>javaClassBuilder</module>
         <module>scheduler</module>
+        <module>exploit</module>
     </modules>
 
 <!--    <dependencies>-->
@@ -31,10 +32,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
